# FrieRay

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  logs.rs  mod.rs  servers.rs  system.rs
src-tauri/src/core/: config.rs  mod.rs  proxy.rs  tray.rs  tun.rs  xray.rs
src-tauri/src/models/: mod.rs  server.rs  settings.rs  xray_config.rs
src-tauri/src/utils/: log_buffer.rs  mod.rs  storage.rs  subscription.rs  vless.rs
src/api/: tauri.js
src/components/Connection/: ConnectButton.css  ConnectButton.jsx
src/components/Layout/: Layout.css  Layout.jsx  Sidebar.css  Sidebar.jsx
src/components/Particles/: MagicParticles.css  MagicParticles.jsx
src/components/UI/: Button.css  Button.jsx  Card.css  Card.jsx  Toggle.css  Toggle.jsx
src/hooks/: useTheme.jsx
src/pages/: AntiThrottle.css  AntiThrottle.jsx  Dashboard.css  Dashboard.jsx  Logs.css  Logs.jsx  Routing.css  Routing.jsx  Servers.css  Servers.jsx  Settings.css  Settings.jsx  SplitTunnel.css  SplitTunnel.jsx  TrayPopup.css  TrayPopup.jsx
src/styles/: animations.css  index.css
