[package]
name = "frieray"
version = "0.1.2"
description = "FrieRay — V2Ray клиент в стиле Фрирен"
authors = ["you"]
edition = "2021"

[lib]
name = "frieray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "socks"] }
base64 = "0.22"
url = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
urlencoding = "2"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
zip = "8.2.0"
